--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,20 +16,21 @@
 		</div>
 
 		<div class = "options">
-			<button type="button">Upper case</button>
+			<button type="button" onclick="POST()">Upper case</button>
 			<button type="button">Lower case</button>
 			<button type="button">Inverse</button>
 			<button type="button">Numbers to words</button>
 			<button type="button">Words to numbers</button>
 		</div>
 
-		<div class = "editor">
+		<div class = "editor" id = "ppp">
 
 		</div>
 
 
 	</div>
 
+	<script src="connect_REST.js"></script>
 
 </body>
 </html>
