add remove duplicates button

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,7 +23,7 @@
 			<button type="button" onclick="POST('capitalize')">Capitalize</button>
 			<button type="button" onclick="POST('inverse')">Inverse</button>
 			<button type="button" onclick="POST('nr_to_words')">Numbers to words</button>
-			<button type="button" onclick="POST('words_to_nr')">Words to numbers</button>
+			<button type="button" onclick="POST('removeDuplicatedWords')">Remove duplicates</button>
 		</div>
 
 		<div class = "editor" id = "ppp">
