--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,12 +18,12 @@
 		</div>
 
 		<div class = "options">
-			<button type="button" onclick="POST('upper')">Upper case</button>
-			<button type="button" onclick="POST('lower')">Lower case</button>
-			<button type="button" onclick="POST('capitalize')">Capitalize</button>
-			<button type="button" onclick="POST('inverse')">Inverse</button>
-			<button type="button" onclick="POST('nr_to_words')">Numbers to words</button>
-			<button type="button" onclick="POST('removeDuplicatedWords')">Remove duplicates</button>
+			<button type="button" onclick="GET('upper')">Upper case</button>
+			<button type="button" onclick="GET('lower')">Lower case</button>
+			<button type="button" onclick="GET('capitalize')">Capitalize</button>
+			<button type="button" onclick="GET('inverse')">Inverse</button>
+			<button type="button" onclick="GET('nr_to_words')">Numbers to words</button>
+			<button type="button" onclick="GET('removeDuplicatedWords')">Remove duplicates</button>
 		</div>
 
 		<div class = "editor" id = "ppp">
