--- a/src/client/index.html
+++ b/src/client/index.html
@@ -20,21 +20,21 @@
 
 		<div class = "options">
 
-			<div class = "multiButton">
-				<button type="button" onclick="showCheckboxes()" >Choose...</button>
+			<div class = "listButton">
+				<button type="button" id="lb1" onclick="showCheckboxes()" >Choose...</button>
 				<div id = "checkboxes">
 					<label for="cb1">
-						<input type="checkbox" id="cb1" />Upper case</label>
+						<input type="checkbox" id="cb1" name='upper' />Upper case</label>
 					<label for="cb2">
-						<input type="checkbox" id="cb2" />Lower case</label>
+						<input type="checkbox" id="cb2" name='lower' />Lower case</label>
 					<label for="cb3">
-						<input type="checkbox" id="cb3" />Capitalize</label>
+						<input type="checkbox" id="cb3" name='capitalize' />Capitalize</label>
 					<label for="cb4">
-						<input type="checkbox" id="cb4" />Inverse</label>
+						<input type="checkbox" id="cb4" name='inverse' />Inverse</label>
 					<label for="cb5">
-						<input type="checkbox" id="cb5" />Numbers to words</label>
+						<input type="checkbox" id="cb5" name='nr_to_words' />Numbers to words</label>
 					<label for="cb6">
-						<input type="checkbox" id="cb6" />Remove duplicates</label>
+						<input type="checkbox" id="cb6" name='removeDuplicatedWords'/>Remove duplicates</label>
 				</div>
 			</div>
 
