finished shorten, shortcut extension and toLatex

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -35,6 +35,12 @@
 						<input type="checkbox" id="cb5" name='nr_to_words' />Numbers to words</label>
 					<label for="cb6">
 						<input type="checkbox" id="cb6" name='removeDuplicatedWords'/>Remove duplicates</label>
+					<label for="cb7">
+						<input type="checkbox" id="cb7" name='extendShortcuts' />NExtend shortcuts</label>
+					<label for="cb8">
+						<input type="checkbox" id="cb8" name='toShortcuts'/>Shorten</label>
+					<label for="cb9">
+						<input type="checkbox" id="cb9" name='toLatex'/>To Latex</label>
 				</div>
 			</div>
 
@@ -44,6 +50,10 @@
 			<button type="button" onclick="GET('inverse')">Inverse</button>
 			<button type="button" onclick="GET('nr_to_words')">Numbers to words</button>
 			<button type="button" onclick="GET('removeDuplicatedWords')">Remove duplicates</button>
+			<button type="button" onclick="GET('extendShortcuts')">Extend shortcuts</button>
+			<button type="button" onclick="GET('toShortcuts')">Shorten</button>
+			<button type="button" onclick="GET('toLatex')">To Latex</button>
+
 
 		</div>
 
