format blank signs added

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -53,6 +53,7 @@
 			<button type="button" onclick="GET('extendShortcuts')">Extend shortcuts</button>
 			<button type="button" onclick="GET('toShortcuts')">Shorten</button>
 			<button type="button" onclick="GET('toLatex')">To Latex</button>
+			<button type="button" onclick="GET('formatBlankSigns')">Format blank</button>
 
 
 		</div>
@@ -61,7 +62,6 @@
 		<div class = "editor" id = "ppp">
 
 			<textarea id="textarea" autofocus>
-
 			</textarea>
 		</div>
 
