--- a/src/client/index.html
+++ b/src/client/index.html
@@ -43,6 +43,8 @@
                                 <input type="checkbox" id="cb8" name='toShortcuts'/>Shorten</label>
                             <label for="cb9">
                                 <input type="checkbox" id="cb9" name='toLatex'/>To Latex</label>
+                            <label for="cb10">
+                                <input type="checkbox" id="cb10" name='timeToWords'/>Time to words</label>
                         </div>
                     </div>
                 </li
