blank formater almost fixed

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </li
                 ><li>
-                    <button type="button" onclick="GET('formatBlankSigns')">Format Blank</button>
+                    <button type="button" onclick="formatBlank()">Format Blank</button>
                 </li
 
                 ><li>
@@ -65,7 +65,13 @@
 		</div>
 
 		<div class = "editor" id = "ppp">
+
+            <div class="highlights" id="hl1"></div>
+
 			<textarea id="textarea" autofocus></textarea>
+
+            <div id="output_div"></div>
+
 		</div>
 
 	</div>
