find and replace fixed, hover

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,7 +60,7 @@
 
                 ><li>
                     <div class="connected">
-                        <button onclick="find()">F</button><button onclick="replace()">R</button><input type="text" placeholder="find..." id="find">
+                        <button onclick="replace()">R</button><input type="text" oninput="find()" placeholder="find..." id="find">
                     </div>
                 </li>
             </ol>
